--- a/build.gradle
+++ b/build.gradle
@@ -10,7 +10,7 @@ buildscript {
         classpath 'com.android.tools.build:gradle:4.1.1'
         classpath 'com.android.tools:r8:2.1.75'
         classpath 'com.google.protobuf:protobuf-gradle-plugin:0.8.9'
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.4.10"
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.4.21"
         classpath 'com.google.gms:google-services:4.3.4'
         classpath 'com.google.firebase:firebase-crashlytics-gradle:2.4.1'
         classpath 'com.google.firebase:perf-plugin:1.3.4'
@@ -43,7 +43,7 @@ apply plugin: 'com.google.gms.google-services'
 apply plugin: 'com.google.firebase.crashlytics'
 apply plugin: 'com.google.firebase.firebase-perf'
 
-def appVersion = 82
+def appVersion = 84
 
 android {
     compileSdkVersion 29
@@ -317,8 +317,8 @@ dependencies {
     implementation 'com.google.firebase:firebase-crashlytics-ktx'
     implementation 'com.google.firebase:firebase-perf-ktx'
     implementation "androidx.browser:browser:1.3.0"
-
-
+    implementation 'com.google.firebase:firebase-messaging:21.0.1'
+    implementation 'com.github.nkzawa:socket.io-client:0.6.0'
 }
 
 protobuf {
