--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,5 @@
 buildscript {
-    ext.kotlin_version = '1.4.10'
+    ext.kotlin_version = '1.4.21'
     repositories {
         google()
         jcenter()
@@ -10,7 +10,7 @@ buildscript {
         classpath 'com.android.tools.build:gradle:4.1.1'
         classpath 'com.android.tools:r8:2.1.75'
         classpath 'com.google.protobuf:protobuf-gradle-plugin:0.8.9'
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.4.10"
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         classpath 'com.google.gms:google-services:4.3.4'
         classpath 'com.google.firebase:firebase-crashlytics-gradle:2.4.1'
         classpath 'com.google.firebase:perf-plugin:1.3.4'
@@ -43,7 +43,7 @@ apply plugin: 'com.google.gms.google-services'
 apply plugin: 'com.google.firebase.crashlytics'
 apply plugin: 'com.google.firebase.firebase-perf'
 
-def appVersion = 88
+def appVersion = 90
 
 android {
     compileSdkVersion 29
@@ -295,7 +295,7 @@ dependencies {
     implementation 'com.google.android.gms:play-services-location:17.1.0'
     implementation 'com.github.clans:fab:1.6.4'
     implementation 'androidx.drawerlayout:drawerlayout:1.1.1'
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:1.4.10"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation 'androidx.recyclerview:recyclerview:1.1.0'
     implementation 'androidx.cardview:cardview:1.0.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
@@ -317,10 +317,15 @@ dependencies {
     implementation 'com.google.firebase:firebase-crashlytics-ktx'
     implementation 'com.google.firebase:firebase-perf-ktx'
     implementation "androidx.browser:browser:1.3.0"
-    implementation ('io.socket:socket.io-client:2.0.0') {
+    implementation ('com.github.nkzawa:socket.io-client:0.6.0'){
         // excluding org.json which is provided by Android
         exclude group: 'org.json', module: 'json'
     }
+
+//    implementation ('io.socket:socket.io-client:2.0.0') {
+//        // excluding org.json which is provided by Android
+//        exclude group: 'org.json', module: 'json'
+//    }
 }
 
 protobuf {
