--- a/build.gradle
+++ b/build.gradle
@@ -139,7 +139,7 @@ android {
             applicationId 'tech.DevAsh.keyOS.pro'
             buildConfigField "boolean", "IS_PLAYSTORE_BUILD", "false"
             buildConfigField "boolean", "IS_DEV_BUILD", "false"
-            resValue "string", "launcher_name", "KeyOS Pro"
+            resValue "string", "launcher_name", "KeyOS"
 
         }
 
@@ -149,7 +149,7 @@ android {
             applicationId 'tech.DevAsh.keyOS.dev'
             buildConfigField "boolean", "IS_PLAYSTORE_BUILD", "true"
             buildConfigField "boolean", "IS_DEV_BUILD", "true"
-            resValue "string", "launcher_name", "KeyOS Dev"
+            resValue "string", "launcher_name", "KeyOS"
         }
 
     }
@@ -204,7 +204,7 @@ android {
         }
 
         pro {
-            res.srcDirs = ['keyOS/res','general/res']
+            res.srcDirs = ['keyOS/res','pro/res']
             java.srcDirs = ['keyOS/src']
             manifest.srcFile "pro/AndroidManifest.xml"
         }
