--- a/dev/AndroidManifest.xml
+++ b/dev/AndroidManifest.xml
@@ -10,7 +10,7 @@
         android:icon="@mipmap/ic_launcher_dev"
         android:roundIcon="@mipmap/ic_launcher_dev_round"
         android:name="tech.DevAsh.keyOS.KioskApp"
-        android:label="@string/app_name"
+        android:label="@string/derived_app_name"
         tools:ignore="UnusedAttribute">
 
     </application>
