--- a/build.gradle
+++ b/build.gradle
@@ -10,7 +10,7 @@ buildscript {
         classpath 'com.android.tools.build:gradle:4.1.3'
         classpath 'com.android.tools:r8:2.2.60'
         classpath 'com.google.protobuf:protobuf-gradle-plugin:0.8.9'
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath 'org.jetbrains.kotlin:kotlin-gradle-plugin:1.5.20'
         classpath 'com.google.gms:google-services:4.3.5'
         classpath 'com.google.firebase:firebase-crashlytics-gradle:2.5.2'
         classpath 'com.google.firebase:perf-plugin:1.3.5'
@@ -314,6 +314,7 @@ dependencies {
         exclude group: 'org.json', module: 'json'
     }
     implementation 'cat.ereza:customactivityoncrash:2.2.0'
+    implementation 'com.razorpay:checkout:1.6.6'
 }
 
 protobuf {
