--- a/SystemUIShared/.gitignore
+++ b/SystemUIShared/.gitignore
@@ -1,1 +1,13 @@
-/build
+*.iml
+.project
+.classpath
+.project.properties
+gen/
+bin/
+.idea/
+.gradle/
+local.properties
+gradle/
+build/
+gradlew*
+.DS_Store
