--- a/gradle.properties
+++ b/gradle.properties
@@ -1,4 +1,17 @@
-org.gradle.jvmargs=-Xmx3g -XX:MaxPermSize=2048m -XX:+HeapDumpOnOutOfMemoryError -Dfile.encoding=UTF-8
+org.gradle.jvmargs=-Xmx2048m
 
 android.useAndroidX=true
 android.enableJetifier=true
+
+ANDROID_X_VERSION=1+
+
+GRADLE_CLASS_PATH=com.android.tools.build:gradle:4.0.0
+
+PROTOBUF_CLASS_PATH=com.google.protobuf:protobuf-gradle-plugin:0.8.16
+PROTOBUF_DEPENDENCY=com.google.protobuf.nano:protobuf-javanano:3.0.0-alpha-7
+
+BUILD_TOOLS_VERSION=31.0.0
+COMPILE_SDK=android-31
+
+
+android.debug.obsoleteApi=true
