--- a/platform_frameworks_libs_systemui/iconloaderlib/build.gradle
+++ b/platform_frameworks_libs_systemui/iconloaderlib/build.gradle
@@ -5,9 +5,11 @@ android {
     compileSdkVersion 31
     buildToolsVersion '31.0.0'
 
+
+
     defaultConfig {
         minSdkVersion 26
-        targetSdkVersion 31
+        targetSdkVersion 28
         versionCode 1
         versionName "1.0"
     }
@@ -41,7 +43,8 @@ android {
 }
 
 dependencies {
-    implementation "androidx.core:core-ktx:1.6.0"
-    implementation "androidx.palette:palette-ktx:1.6.0"
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    implementation "androidx.core:core-ktx:1.7.0"
+    implementation "androidx.palette:palette-ktx:1.0.0"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:1.6.10"
 }
+
